--- a/ionic.project
+++ b/ionic.project
@@ -1,4 +1,10 @@
 {
   "name": "hopOrNot",
-  "app_id": ""
+  "app_id": "",
+  "proxies": [
+    {
+      "path": "/api/randomBrew",
+      "proxyUrl": "http://api.brewerydb.com/v2/beer/random/"
+    }
+  ]
 }
