Save beers to database; retrieve beers

--- a/ionic.project
+++ b/ionic.project
@@ -5,6 +5,10 @@
     {
       "path": "/api/randomBrew",
       "proxyUrl": "http://api.brewerydb.com/v2/beer/random/"
+    },
+    {
+    	"path": "/api/saveBrew",
+    	"proxyUrl": "http://localhost:3000/"
     }
   ]
 }
