--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.0",
-    "p": "~0.3.3"
+    "p": "~0.3.3",
+    "platform.js": "platform#~1.3.0"
   },
   "dependencies": {
     "Ionicons": "ionicons#~2.0.1"
