--- a/ionic.project
+++ b/ionic.project
@@ -8,7 +8,7 @@
     },
     {
     	"path": "/api/saveBrew",
-    	"proxyUrl": "http://localhost:3000/"
+    	"proxyUrl": "https://heroku-bartender-node-api.herokuapp.com/"
     }
   ]
 }
